--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -14,3 +14,4 @@
   = f.input :password_confirmation, label: 'Password Confirmation', required: true
   = f.input :role, label: 'Role', collection: ['employee','admin'], as: :radio_buttons
   = f.button :submit, 'Add User', confirm: 'Are you sure?'
+= button_to 'Cancel', user_profile_path(current_user), method: :get, class: 'red-button'
